<resources>
    <string name="app_name">JobsRendu</string>
    <string name="logo">Jobs</string>
    <string name="job_search">Job search</string>
    <string name="lang_change">EN/中</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="job_what">What</string>
    <string name="job_where">Where</string>
    <string name="go">GO</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="phone">Phone</string>
    <string name="notice_sign_up">Do not have an account, please </string>
    <string name="created_jobs">Created job list</string>
    <string name="create_job">Create a new job</string>
    <string name="choose_plan">Choose a plan</string>
    <string name="plan1">Plan 1</string>
    <string name="plan1_sub">3 months subscription</string>
    <string name="plan1_price">20 euros</string>
    <string name="plan2">Plan 2</string>
    <string name="plan2_sub">6 months subscription</string>
    <string name="plan2_price">38 euros</string>
    <string name="plan3">Plan 3</string>
    <string name="plan3_sub">12 months subscription</string>
    <string name="plan3_price">74 euros</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="valid">VALID</string>
    <string name="refuse">REFUSE</string>
    <string name="job_field">Job field</string>
    <string name="city">City</string>
    <string name="job_title">Job title</string>
    <string name="description">Description</string>
    <string name="fill_form">Please fill the form to apply</string>
    <string name="use_exist_profile">Or use an existing candidature profile</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="residence">Residence</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="profile_name">Profile name</string>
    <string name="candidatures">Recent candidatures</string>
    <string name="select_existing_profile">Please select an existing profile</string>
    <string name="candidates">Candidates</string>
    <string name="response_to_candidate">Response to candidate</string>
    <string name="company">Company</string>
    <string-array name="roles_array">
        <item>SELECT YOUR ROLE</item>
        <item>Job seeker</item>
        <item>Employer</item>
        <item>Agency</item>
        <item>Administrator</item>
    </string-array>
    <string-array name="response">
        <item>SELECT STATUS</item>
        <item>waiting for reply</item>
        <item>accept</item>
        <item>refuse</item>
    </string-array>
</resources>