<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="textStart"
    tools:context=".SubscriptionActivity">
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:orientation="vertical"-->
    <!--    android:layout_width="fill_parent"-->
    <!--    android:layout_height="fill_parent"-->
    <!--    tools:context=".MainActivity">-->
    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.fragment.app.FragmentContainerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.jobsrendu.NavigationFragment" >
        </androidx.fragment.app.FragmentContainerView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/choose_plan"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/plan1"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#E5E5E5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="bottom|center"
                android:text="@string/plan1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="bottom|center"
                android:text="@string/plan1_sub"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:gravity="bottom|center"
                android:text="@string/plan1_price"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/plan2"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#E5E5E5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="bottom|center"
                android:text="@string/plan2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="bottom|center"
                android:text="@string/plan2_sub"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:gravity="bottom|center"
                android:text="@string/plan2_price"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/plan3"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#E5E5E5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="bottom|center"
                android:text="@string/plan3"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="bottom|center"
                android:text="@string/plan3_sub"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:gravity="bottom|center"
                android:text="@string/plan3_price"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>