<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="textStart"
    tools:context=".MainActivity">
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:orientation="vertical"-->
    <!--    android:layout_width="fill_parent"-->
    <!--    android:layout_height="fill_parent"-->
    <!--    tools:context=".MainActivity">-->
    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.fragment.app.FragmentContainerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.jobsrendu.NavigationFragment" >
        </androidx.fragment.app.FragmentContainerView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009DCCF4"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#3F51B5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notice_sign_up"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009DCCF4"
                android:text="@string/sign_up"
                android:textColor="#3F51B5"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>