<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="textStart"
    tools:context=".CreateJobActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.jobsrendu.NavigationFragment" >
        </androidx.fragment.app.FragmentContainerView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/create_job"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="378dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/job_field"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/job_field"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/job_title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/job_title"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center|top">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="180dp"
                    android:layout_height="166dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:id="@+id/company_row"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/job_company"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED"
                    android:hint="" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_create_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009DCCF4"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#3F51B5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>