<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="textStart"
    tools:context=".MainActivity">
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:orientation="vertical"-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="fill_parent"-->
<!--    tools:context=".MainActivity">-->
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="542dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.fragment.app.FragmentContainerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.jobsrendu.NavigationFragment" >
        </androidx.fragment.app.FragmentContainerView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#9CCBF3">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/job_what" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="#EDEDED"
                        android:hint="" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#9CCBF3">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/job_where" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="#EDEDED"
                        android:hint="" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:background="#009DCCF4"
                    android:text="@string/go"
                    android:textColor="#3F51B5" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <!--</LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>